force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Maximum_Payroll_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Maximum_Payroll_Date__c</fullName>
    <description>The maximum payroll date entered on the Pay Batch creation page to determine the calendar period.</description>
    <formula>tc9_pr__Pay_Batch__r.tc9_pr__Maximum_Payroll_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The maximum payroll date entered on the Pay Batch creation page to determine the calendar period.</inlineHelpText>
    <label>Maximum Payroll Date</label>
    <type>Date</type>
</CustomField>