force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Net_Earning__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Net_Earning__c</fullName>
    <description>The Net Earning amount calculated for the Payee Pay Batch Record</description>
    <inlineHelpText>The Net Earning amount calculated for the Payee Pay Batch Record</inlineHelpText>
    <label>Net Earning</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>