force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Net_Earning_Ex_Post_Tax_Deductions__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Net_Earning_Ex_Post_Tax_Deductions__c</fullName>
    <description>The net earning amount before post tax deductions are applied</description>
    <inlineHelpText>The net earning amount before post tax deductions are applied</inlineHelpText>
    <label>Net Earning Ex Post Tax Deductions</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>