force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Non_Taxable_Allowances__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Non_Taxable_Allowances__c</fullName>
    <description>The sum total of all related Pay Transactions with a Record Type Allowance and Is PAYG Payable? = False</description>
    <inlineHelpText>The sum total of all related Pay Transactions with a Record Type Allowance and Is PAYG Payable? = False</inlineHelpText>
    <label>Non Taxable Allowances</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>