force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Non_Taxable_Other__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Non_Taxable_Other__c</fullName>
    <description>&quot;The sum total of all related Pay Transactions with a Record Type of Other with 
Is PAYG Payable? = True&quot;</description>
    <inlineHelpText>&quot;The sum total of all related Pay Transactions with a Record Type of Other with 
Is PAYG Payable? = True&quot;</inlineHelpText>
    <label>Non Taxable Other</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>