force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Ordinary_Time_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Ordinary_Time_Earnings__c</fullName>
    <description>The total value of related pay transactions which contribute to Ordinary Time Earnings.</description>
    <inlineHelpText>The total value of related pay transactions which contribute to Ordinary Time Earnings.</inlineHelpText>
    <label>Ordinary Time Earnings</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>