force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Pay_Batch__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related parent Pay Batch record.</description>
    <inlineHelpText>The related parent Pay Batch record.</inlineHelpText>
    <label>Pay Batch</label>
    <referenceTo>tc9_pr__Pay_Batch__c</referenceTo>
    <relationshipLabel>Payee Pay Batch</relationshipLabel>
    <relationshipName>Pay_Batch_Items</relationshipName>
    <type>Lookup</type>
</CustomField>