force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Pay_Batch_Manager__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch_Manager__c</fullName>
    <description>Launch the Pay Batch Manager user interface.</description>
    <formula>If ( NOT ( ISBLANK ( tc9_pr__Pay_Batch__c ) ) ,
If( CONTAINS ( Text ( tc9_pr__Pay_Batch__r.tc9_pr__Status__c ) , &quot;Creating&quot;) , IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ &quot;resource/tc9_pr__Payroll_resources/AUS_Payroll/Images/LaunchButton_Grey.png&quot;, &quot;Manager&quot;) ,
HYPERLINK(&quot;/one/one.app#/alohaRedirect/apex/tc9_pr__PayBatchManager?recordId=&quot;+ tc9_pr__Pay_Batch__r.Id, IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ &quot;resource/tc9_pr__Payroll_resources/AUS_Payroll/Images/&quot; +
If( CONTAINS ( Text ( tc9_pr__Status__c ) , &quot;Failed&quot; ) , &quot;LaunchButton_Red.png&quot;,
If( CONTAINS ( Text ( tc9_pr__Status__c ) , &quot;Uncalculated&quot; ) , &quot;LaunchButton_Orange.png&quot;,
If( CONTAINS ( Text ( tc9_pr__Status__c ) , &quot;ing&quot; ) , &quot;LaunchButton_Green.png&quot;,
&quot;LaunchButton_Blue.png&quot; ) ) ) ,&quot;Manager&quot;),&quot;_blank&quot;)) , null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Launch the Pay Batch Manager user interface.</inlineHelpText>
    <label>Pay Batch Manager</label>
    <type>Text</type>
</CustomField>