force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Pay_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Period_End_Date__c</fullName>
    <description>The End Date of the Pay Calendar Period.</description>
    <formula>tc9_pr__Calendar_Period__r.tc9_pr__End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The End Date of the Pay Calendar Period.</inlineHelpText>
    <label>Pay Period End Date</label>
    <type>Date</type>
</CustomField>