force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Pay_Schedule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Schedule__c</fullName>
    <description>Defines the Pay Schedule that applies to the Pay Batch.</description>
    <formula>tc9_pr__Pay_Batch__r.tc9_pr__Schedule__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Defines the Pay Schedule that applies to the Pay Batch.</inlineHelpText>
    <label>Pay Schedule</label>
    <type>Text</type>
</CustomField>