force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__PAYE__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__PAYE__c</fullName>
    <description>The total amount of PAYE calculated.</description>
    <inlineHelpText>The total amount of PAYE calculated.</inlineHelpText>
    <label>PAYE</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>