force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__PAYE_YTD__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__PAYE_YTD__c</fullName>
    <description>YTD PAYE determined during the pay batch calculation (country applicable).</description>
    <inlineHelpText>YTD PAYE determined during the pay batch calculation (country applicable).</inlineHelpText>
    <label>PAYE YTD</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>