force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Payee.</description>
    <inlineHelpText>The related Payee.</inlineHelpText>
    <label>Payee</label>
    <referenceTo>tc9_pr__Payee__c</referenceTo>
    <relationshipLabel>Payee Pay Batch</relationshipLabel>
    <relationshipName>Pay_Batch_Items</relationshipName>
    <type>Lookup</type>
</CustomField>