force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__PAYG_ETP_R__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__PAYG_ETP_R__c</fullName>
    <description>ETP PAYG on ETP Type R.</description>
    <inlineHelpText>ETP PAYG on ETP Type R.</inlineHelpText>
    <label>PAYG ETP R</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>