force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Payment_After_Leaving__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_After_Leaving__c</fullName>
    <description>Indicates that this payee pay batch is for a payment after leaving, in an applicable payroll jurisdiction.</description>
    <inlineHelpText>Indicates that this payee pay batch is for a payment after leaving, in an applicable payroll jurisdiction.</inlineHelpText>
    <label>Payment After Leaving?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>