force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Payment Entity.</description>
    <inlineHelpText>The related Payment Entity.</inlineHelpText>
    <label>Payment Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payee Pay Batch (Payment Entity)</relationshipLabel>
    <relationshipName>Pay_Batch_Items</relationshipName>
    <type>Lookup</type>
</CustomField>