force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Period_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Period_Type__c</fullName>
    <description>Indicates whether this payee pay batch is for the current period, a prior period or a future period.</description>
    <formula>If ( tc9_pr__Calendar_Period__r.tc9_pr__End_Date__c &gt; tc9_pr__Pay_Batch__r.tc9_pr__Calendar_Period__r.tc9_pr__End_Date__c ,&quot;Future&quot; ,
If ( tc9_pr__Calendar_Period__r.tc9_pr__End_Date__c &lt; tc9_pr__Pay_Batch__r.tc9_pr__Calendar_Period__r.tc9_pr__End_Date__c ,&quot;Past&quot; ,
 &quot;Current&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether this payee pay batch is for the current period, a prior period or a future period.</inlineHelpText>
    <label>Period Type</label>
    <type>Text</type>
</CustomField>