force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Pre_Tax_Deductions__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pre_Tax_Deductions__c</fullName>
    <description>&quot;The sum total of all related Pay Transactions with a Record Type of Deduction with 
Deduction Applied = Pre-Tax&quot;</description>
    <inlineHelpText>&quot;The sum total of all related Pay Transactions with a Record Type of Deduction with 
Deduction Applied = Pre-Tax&quot;</inlineHelpText>
    <label>Pre Tax Deductions</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>