force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Qualifying_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Qualifying_Earnings__c</fullName>
    <description>The total value of related pay transactions that contribute to Qualifying Earnings.</description>
    <inlineHelpText>The total value of related pay transactions that contribute to Qualifying Earnings.</inlineHelpText>
    <label>Qualifying Earnings</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>