force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Reduced_Ordinary_Time_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Reduced_Ordinary_Time_Earnings__c</fullName>
    <description>Ordinary Time Earnings minus pre-tax deductions which reduce OTE</description>
    <inlineHelpText>Ordinary Time Earnings minus pre-tax deductions which reduce OTE</inlineHelpText>
    <label>Reduced Ordinary Time Earnings</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>