force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Reportable_Allowances_ATO_AUS__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Reportable_Allowances_ATO_AUS__c</fullName>
    <description>The sum total of all related Pay Transactions where the pay code ATO Allowance Type is not Gross.</description>
    <inlineHelpText>The sum total of all related Pay Transactions where the pay code ATO Allowance Type is not Gross.</inlineHelpText>
    <label>Reportable Allowances ATO AUS</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>