force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Status__c</fullName>
    <description>The processing status of this Payee Pay Batch record.</description>
    <inlineHelpText>The processing status of this Payee Pay Batch record.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Pay_Batch_Status_Picklist</valueSetName>
    </valueSet>
</CustomField>