force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__STP2_CSA_Deductions__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__STP2_CSA_Deductions__c</fullName>
    <description>The reportable amount of Child Support Deduction for STP2.</description>
    <inlineHelpText>The reportable amount of Child Support Deduction for STP2.</inlineHelpText>
    <label>STP2 CSA Deductions</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>