force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__STP2_Gross_OT_Allowances__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__STP2_Gross_OT_Allowances__c</fullName>
    <description>The total of allowance pay transactions to be included in Gross or Overtime during STP2 creation.</description>
    <inlineHelpText>The total of allowance pay transactions to be included in Gross or Overtime during STP2 creation.</inlineHelpText>
    <label>STP2 Gross/OT Allowances</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>