force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__STP2_Reportable_Deductions__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__STP2_Reportable_Deductions__c</fullName>
    <description>The sum total of all related Pay Transactions where the pay code is reportable as an Allowance in STP2.</description>
    <inlineHelpText>The sum total of all related Pay Transactions where the pay code is reportable as an Allowance in STP2.</inlineHelpText>
    <label>STP2 Reportable Deductions</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>