force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Superannuation_Month__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Superannuation_Month__c</fullName>
    <description>The month used to assess Ordinary Time Earnings during Pay Batch calculation.</description>
    <formula>MONTH ( tc9_pr__Pay_Batch__r.tc9_pr__Payment_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The month used to assess Ordinary Time Earnings during Pay Batch calculation.</inlineHelpText>
    <label>Superannuation Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>