force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Superannuation_Quarter__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Superannuation_Quarter__c</fullName>
    <description>The quarter used to assess Ordinary Time Earnings during Pay Batch calculation.</description>
    <formula>CASE ( MONTH ( tc9_pr__Pay_Batch__r.tc9_pr__Payment_Date__c ),
1,3,
2,3,
3,3,
4,4,
5,4,
6,4,
7,1,
8,1,
9,1,
10,2,
11,2,
12,2,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The quarter used to assess Ordinary Time Earnings during Pay Batch calculation.</inlineHelpText>
    <label>Superannuation Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>