force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Superannuation_Year_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Superannuation_Year_Start_Date__c</fullName>
    <description>The year used to assess Ordinary Time Earnings during Pay Batch calculation.</description>
    <formula>If ( tc9_pr__Pay_Batch__r.tc9_pr__Payment_Date__c &gt;= DATE ( YEAR ( tc9_pr__Pay_Batch__r.tc9_pr__Payment_Date__c ) , 7 , 1 ) , DATE ( YEAR ( tc9_pr__Pay_Batch__r.tc9_pr__Payment_Date__c ) , 7 , 1 ) , DATE ( YEAR ( tc9_pr__Pay_Batch__r.tc9_pr__Payment_Date__c ) -1 , 7 , 1 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The year used to assess Ordinary Time Earnings during Pay Batch calculation.</inlineHelpText>
    <label>Superannuation Year Start Date</label>
    <type>Date</type>
</CustomField>