force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Taxable_Average_Earnings_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Taxable_Average_Earnings_Adjustment__c</fullName>
    <description>The average taxable regular earnings determined for the purpose of marginal tax calculation</description>
    <inlineHelpText>The average taxable regular earnings determined for the purpose of marginal tax calculation</inlineHelpText>
    <label>Taxable Average Earnings Adjustment</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>