force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Taxable_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Taxable_Earnings__c</fullName>
    <description>The sum total of all taxable earnings less pre tax deductions</description>
    <inlineHelpText>The sum total of all taxable earnings less pre tax deductions</inlineHelpText>
    <label>Taxable Earnings</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>