force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Total_Employee_Contribution_SG__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Total_Employee_Contribution_SG__c</fullName>
    <description>The total value of related pay transactions for pre and post tax superannuation deductions.</description>
    <inlineHelpText>The total value of related pay transactions for pre and post tax superannuation deductions.</inlineHelpText>
    <label>Total Employee Contribution (SG)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>