force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Total_Employer_Contribution_SG__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Total_Employer_Contribution_SG__c</fullName>
    <description>The total value of related employer superannuation pay transactions.</description>
    <inlineHelpText>The total value of related employer superannuation pay transactions.</inlineHelpText>
    <label>Total Employer Contribution (SG)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>