force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Total_Net_Earnings_Expense_Reimburseme__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Total_Net_Earnings_Expense_Reimburseme__c</fullName>
    <description>The Net Earnings amount calculated for the Payee Pay Batch plus any expenses</description>
    <inlineHelpText>The Net Earnings amount calculated for the Payee Pay Batch plus any expenses</inlineHelpText>
    <label>Total Net Earnings + Expense Reimburseme</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>