force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Total_Quantity__c</fullName>
    <description>The total quantity of related Payment pay transactions.</description>
    <inlineHelpText>The total quantity of related Payment pay transactions.</inlineHelpText>
    <label>Total Quantity</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>